--- a/beamng_msgs/package.xml
+++ b/beamng_msgs/package.xml
@@ -4,8 +4,9 @@
   <version>0.0.0</version>
   <description>The beamng_msgs package.</description>
 
-  <maintainer email="info@beamng.gmbh">BeamNG GmbH</maintainer>
-
+  <author>Abdul Rahman Saeed</author>
+  <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
+  
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
