initial update for 0.33 release

--- a/beamng_agent/package.xml
+++ b/beamng_agent/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>Vehicle input control.</description>
 
-  <author>Abdul Rahman Saeed</author>
+  <author>BeamNG GmbH</author>
   <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
 
   <license>MIT</license>
