--- a/beamng_control/package.xml
+++ b/beamng_control/package.xml
@@ -4,7 +4,7 @@
   <version>0.0.0</version>
   <description>Package for BeamNG.tech integration via the BeamNGpy library.</description>
 
-  <author>Abdul Rahman Saeed</author>
+  <author>BeamNG GmbH</author>
   <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
 
   <license>MIT</license>
