--- a/beamng_msgs/CMakeLists.txt
+++ b/beamng_msgs/CMakeLists.txt
@@ -1,10 +1,12 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(beamng_msgs)
 find_package(catkin REQUIRED COMPONENTS
-message_generation
-std_msgs
-actionlib_msgs
+  std_msgs
+  geometry_msgs
+  actionlib_msgs
+  message_generation
 )
+
 add_message_files(
   FILES
   DamageSensor.msg
@@ -17,6 +19,17 @@ add_message_files(
   TimeSensor.msg
   VehicleControl.msg
   VehicleInfo.msg
+  MeshSensor.msg
+  MeshSensorBeam.msg
+  MeshSensorNode.msg
+  IdealRadarSensor.msg
+  IdealRadarSensorVehicle.msg
+  PowertrainSensor.msg
+  PowertrainSensorDevice.msg
+  RadarScan.msg
+  RadarReturn.msg
+  RoadsSensor.msg
+  CubicPolynomial.msg
 )
 add_service_files(
   DIRECTORY srv
@@ -40,13 +53,18 @@ add_action_files(
 generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
   actionlib_msgs
 )
+
 catkin_package(
- CATKIN_DEPENDS 
- std_msgs 
- actionlib_msgs
+  CATKIN_DEPENDS 
+  message_runtime
+  std_msgs 
+  geometry_msgs 
+  actionlib_msgs
 )
+
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
