--- a/beamng_teleop_keyboard/package.xml
+++ b/beamng_teleop_keyboard/package.xml
@@ -6,7 +6,7 @@
     Provides teleoperation using keyboard to move the vehicles in BemaNG simulation using geometry messages 
   </description>
   <license>MIT</license>
-  <author>Abdul Rahman Saeed</author>
+  <author>BeamNG GmbH</author>
   <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
