--- a/beamng_teleop_keyboard/package.xml
+++ b/beamng_teleop_keyboard/package.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>beamng_teleop_keyboard</name>
-  <version>1.2.1</version>
+  <version>0.6.0</version>
   <description>
     Provides teleoperation using keyboard to move the vehicles in BemaNG simulation using geometry messages 
   </description>
   <license>MIT</license>
-  <author>Abdul Rahman Saeed</author>
+  <author>BeamNG GmbH</author>
   <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
 
   <buildtool_depend>catkin</buildtool_depend>
