--- a/beamng_agent/package.xml
+++ b/beamng_agent/package.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>beamng_agent</name>
-  <version>0.0.0</version>
+  <version>0.6.0</version>
   <description>Vehicle input control.</description>
 
-  <author>Abdul Rahman Saeed</author>
+  <author>BeamNG GmbH</author>
   <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
 
   <license>MIT</license>
