--- a/beamng_msgs/package.xml
+++ b/beamng_msgs/package.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>beamng_msgs</name>
-  <version>0.0.0</version>
+  <version>0.6.0</version>
   <description>The beamng_msgs package.</description>
 
-  <author>Abdul Rahman Saeed</author>
+  <author>BeamNG GmbH</author>
   <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
-  
+
   <license>MIT</license>
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend> 
   <build_depend>message_generation</build_depend>
+
   <build_export_depend>std_msgs</build_export_depend>
+  <build_export_depend>geometry_msgs</build_export_depend> 
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend> 
   <exec_depend>actionlib_msgs</exec_depend>
+  <exec_depend>message_runtime</exec_depend>
 
   <export>
   </export>
 </package>
-
-
