--- a/beamng_msgs/package.xml
+++ b/beamng_msgs/package.xml
@@ -4,7 +4,7 @@
   <version>0.6.0</version>
   <description>The beamng_msgs package.</description>
 
-  <author>BeamNG GmbH</author> <!-- Updated author -->
+  <author>BeamNG GmbH</author>
   <maintainer email="tech@beamng.gmbh">BeamNG GmbH</maintainer>
 
   <license>MIT</license>
@@ -12,13 +12,13 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
-  <build_depend>geometry_msgs</build_depend> <!-- Added dependency -->
+  <build_depend>geometry_msgs</build_depend> 
   <build_depend>message_generation</build_depend>
 
   <build_export_depend>std_msgs</build_export_depend>
-  <build_export_depend>geometry_msgs</build_export_depend> <!-- Added dependency -->
+  <build_export_depend>geometry_msgs</build_export_depend> 
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>geometry_msgs</exec_depend> <!-- Added dependency -->
+  <exec_depend>geometry_msgs</exec_depend> 
   <exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
