--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,12 @@ default:
   tags:
     - docker
 
-deploy-pages:
-  stage: deploy
+stages:
+  - build
+  - deploy
+
+build-pages:
+  stage: build
   variables:
     GIT_STRATEGY: clone  # use fresh clone of repository (avoiding any old branches)
     USE_DEV_BRANCH: "true"
@@ -17,3 +21,26 @@ deploy-pages:
       - docs/build
   only:
     - dev
+
+deploy-production:
+  stage: deploy
+  variables:
+    GIT_STRATEGY: clone  # use fresh clone of repository (avoiding any old branches)
+    USE_DEV_BRANCH: "true"
+    DOCUMENTATION_REPOSITORY: "$DOCUMENTATION_REPOSITORY"
+    DOCUMENTATION_BRANCH: "master"
+    DOCUMENTATION_LOCAL_REPO: "docs/production"
+    DOCUMENTATION_SSH_PRIVATE_KEY: "$SSH_PRIVATE_KEY"
+    DOCUMENTATION_GIT_USERNAME: "$GITLAB_USER_NAME"
+    DOCUMENTATION_GIT_EMAIL: "$GITLAB_USER_EMAIL"
+    DOCUMENTATION_ARTIFACTS_PATH: "docs/build"
+    DOCUMENTATION_TARGET_PATH: "static/api/ros1"
+  script:
+    - bash docs/build.sh
+    - bash docs/deploy_production.sh
+  artifacts:
+    paths:
+      - docs/build
+  only:
+    - dev
+    #- master - change also USE_DEV_BRANCH to false
