--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,7 +26,7 @@ deploy-production:
   stage: deploy
   variables:
     GIT_STRATEGY: clone  # use fresh clone of repository (avoiding any old branches)
-    USE_DEV_BRANCH: "true"
+    USE_DEV_BRANCH: "false"
     DOCUMENTATION_REPOSITORY: "$DOCUMENTATION_REPOSITORY"
     DOCUMENTATION_BRANCH: "master"
     DOCUMENTATION_LOCAL_REPO: "docs/production"
@@ -42,5 +42,4 @@ deploy-production:
     paths:
       - docs/build
   only:
-    - dev
-    #- master - change also USE_DEV_BRANCH to false
+    - master
